<resources>
    <string name="app_name">BotonPanico</string>

    <string name="actperfciud_tv_titulo">Completa tu Perfil</string>
    <string name="actperfciud_et_numerodocumento_hint">Número de documento</string>
    <string name="actperfciud_et_apellidopaterno_hint">Apellido Paterno</string>
    <string name="actperfciud_et_apellidomaterno_hint">Apellido Materno</string>
    <string name="actperfciud_et_nombres_hint">Nombres</string>
    <string name="actperfciud_et_celular_hint">Celular</string>
    <string name="actperfciud_et_correo_hint">Correo</string>
    <string name="actperfciud_et_direccion_hint">Dirección</string>
    <string name="actperfciud_btn_guardar">Guardar</string>

    <string name="actini_btn_sos">SOS</string>
    <string name="actini_btn_aux1">Incendio</string>
    <string name="actini_btn_aux2">Asistencia</string>
    <string name="actini_btn_otro">Otra Incidencia</string>


    <string name="actotrinc_btn_enviar">Enviar</string>
    <string name="actotrinc_et_descripcion_hint">Descripción</string>

</resources>